// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering results loaded 1`] = `
<div
  className="css-1t62idy"
  style={Object {}}
>
  <div
    className={false}
    style={Object {}}
  >
    <div
      className="p-a300"
    >
      <form
        acceptCharset="UTF-8"
        action="/lookup"
        className="sf sf--y sf--md"
        method="get"
        onSubmit={[Function]}
      >
        <div
          className="sf-i"
        >
          <input
            className="sf-i-f"
            name="q"
            onInput={[Function]}
            placeholder="Search recent cases…"
            type="text"
            value=""
          />
          <button
            className="sf-i-b"
          >
            Search
          </button>
        </div>
      </form>
    </div>
    <hr
      className="hr hr--dash"
    />
  </div>
  <div
    className="p-a300 css-hlpxua"
    data-request-id="17-000000001"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1jhr6lu": "",
        }
      }
      style={
        Object {
          "backgroundImage": "url(/static/img/311-logo-white-on-grey.svg)",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1jhr6lu": "",
          }
        }
        style={
          Object {
            "backgroundImage": "url()",
          }
        }
      />
    </div>
    <div
      className={
        Object {
          "data-css-n42ldu": "",
        }
      }
    >
      <h4
        className="t--intro t--ellipsis css-1fzcvxa"
      >
        Cosmic Intervention
      </h4>
      <div
        className={
          Object {
            "data-css-3l5swg": "",
          }
        }
      >
        I think that Thanos is here
      </div>
      <div
        style={
          Object {
            "paddingTop": 5,
          }
        }
      >
        <span
          className="t--upper t--sans css-14tkn0p"
        >
          Opened
        </span>
        <span
          className="t--info"
          style={
            Object {
              "fontSize": 14,
            }
          }
        >
          4 minutes ago
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering with request selected 1`] = `
<div
  className="css-1t62idy"
  style={Object {}}
>
  <div
    className={false}
    style={Object {}}
  >
    <div
      className="p-a300"
    >
      <form
        acceptCharset="UTF-8"
        action="/lookup"
        className="sf sf--y sf--md"
        method="get"
        onSubmit={[Function]}
      >
        <div
          className="sf-i"
        >
          <input
            className="sf-i-f"
            name="q"
            onInput={[Function]}
            placeholder="Search recent cases…"
            type="text"
            value=""
          />
          <button
            className="sf-i-b"
          >
            Search
          </button>
        </div>
      </form>
    </div>
    <hr
      className="hr hr--dash"
    />
  </div>
  <div
    className="p-a300 css-hlpxua"
    data-request-id="17-000000001"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1jhr6lu": "",
        }
      }
      style={
        Object {
          "backgroundImage": "url(/static/img/311-logo-grey-on-white.svg)",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1jhr6lu": "",
          }
        }
        style={
          Object {
            "backgroundImage": "url()",
          }
        }
      />
    </div>
    <div
      className={
        Object {
          "data-css-n42ldu": "",
        }
      }
    >
      <h4
        className="t--intro t--ellipsis css-1fzcvxa"
      >
        Cosmic Intervention
      </h4>
      <div
        className={
          Object {
            "data-css-3l5swg": "",
          }
        }
      >
        I think that Thanos is here
      </div>
      <div
        style={
          Object {
            "paddingTop": 5,
          }
        }
      >
        <span
          className="t--upper t--sans css-14tkn0p"
        >
          Opened
        </span>
        <span
          className="t--info"
          style={
            Object {
              "fontSize": 14,
            }
          }
        >
          4 minutes ago
        </span>
      </div>
    </div>
  </div>
</div>
`;
